fix: prevent images from overflowing
Closes #192

--- a/blocks/story-feed/story-feed.css
+++ b/blocks/story-feed/story-feed.css
@@ -27,9 +27,12 @@
   grid-column: col-start 1 / span 6;
 }
 
+.cmp-stories-card a {
+  overflow: hidden;
+}
+
 .cmp-stories-card__media {
   aspect-ratio: 1 / 1;
-  overflow: hidden;
 }
 
 .cmp-stories-card__media img {
